<resources>
    <string name="app_name">Covid19</string>
    <string name="homeText2">The disease was first identified in December 2019 in Wuhan, the capital of China\'s Hubei province, and has since spread globally, resulting in the ongoing 2019–20 coronavirus pandemic. The World Health Organization declared the outbreak a Public Health Emergency of International Concern on 30 January, and a pandemic on 11 March. As of 29 April 2020, more than 3.17 million cases have been reported across 185 countries and territories, resulting in more than 224,000 deaths. More than 958,000 people have recovered.\n</string>
    <string name="homeText3">The virus is primarily spread between people during close contact, often via small droplets produced by coughing, sneezing, or talking. Common symptoms include fever, cough, fatigue, shortness of breath, and loss of smell. Complications may include pneumonia and acute respiratory distress syndrome.\n</string>
    <string name="homeText4">The pandemic has caused severe global socioeconomic disruption, including the largest global recession since the Great Depression. It has led to the postponement or cancellation of sporting, religious, political and cultural events, widespread supply shortages exacerbated by panic buying, and decreased emissions of pollutants and greenhouse gases.</string>
    <string name="homeText5">Schools, universities and colleges have closed either on a nationwide or local basis in 194 countries, affecting approximately 98.5 per cent of the world\'s student population. Misinformation about the virus has spread online, and there have been incidents of xenophobia and discrimination against Chinese people and against those perceived as being Chinese, or as being from areas with high infection rates.\n</string>
    <string name="transmissionHeading">Transmission\n</string>
    <string name="transmissionText1">As COVID-19 is a new disease, many aspects of how it is spread are under investigation.\n</string>
    <string name="transmissionText2">1. The disease is spread during close contact, often by small droplets produced during coughing, sneezing, or talking.[8] These droplets can be inhaled by other people when in close contact (1 to 2 metres, 3 to 6 feet)\n</string>
    <string name="transmissionText3">2. Being relatively heavy, these droplets can fall on objects and surfaces around the sick person such as tables, doorknobs and handrails. People can become infected by touching these objects or surfaces, then touching their eyes, nose or mouth.\n</string>
    <string name="transmissionText4">3. The virus is most contagious during the first three days after onset of symptoms, although spread is known to occur up to two days before symptoms appear and in later stages of the disease. Therefore, transmission is possible before symptoms develop.\n</string>
    <string name="symptomsHeading">\n\n\nSymptoms\n</string>
    <string name="symptomsText1">Symptoms of COVID-19 can be relatively non-specific and infected people may be asymptomatic.\n</string>
    <string name="symptomsText2">1. The the most common symptoms are fever (88 per cent), dry cough (68 per cent) and tiredness.\n</string>
    <string name="symptomsText3">2. Other symptoms include respiratory sputum production (phlegm), loss of the sense of smell (only 15 per cent), shortness of breath, muscle and joint pain, sore throat, headache, chills, vomiting, hemoptysis, and diarrhea.\n</string>
    <string name="symptomsText4">3. Severe (emergency) symptoms include difficulty breathing, persistent chest pain or pressure, sudden confusion, difficulty waking, and bluish face or lips.\n</string>
    <string name="symptomsText5">4. Further development of the disease can lead to potentially fatal complications including pneumonia, acute respiratory distress syndrome, sepsis, septic shock, and kidney failure.\n</string>
    <string name="symptomsText6">Most people (about 80%) recover from the disease without needing hospital treatment. Some of those infected may even remain asymptomatic (upto 44 percent). Around 1 out of every 5 people who gets COVID-19 becomes seriously ill and develops difficulty breathing. Older people, and those with underlying medical problems like high blood pressure, heart and lung problems, diabetes, or cancer , are at higher risk of developing serious illness.</string>
    <string name="symptomsText7">\nHowever anyone can catch COVID-19 and become seriously ill. Even people with very mild symptoms of COVID-19 can transmit the virus. People of all ages who experience fever, cough and difficulty breathing should seek medical attention.\n</string>
    <string name="preventionsHeading">Preventive Measures\n</string>
    <string name="preventionsText1">1. Wash hands often with soap and water for at least twenty seconds, especially after going to the toilet or when hands are visibly dirty; before eating; and after blowing one\'s nose, coughing, or sneezing.\n</string>
    <string name="preventionsText2">2. Use an alcohol-based hand sanitiser with at least 60 per cent alcohol by volume when soap and water are not readily available.\n</string>
    <string name="preventionsText3">3. Avoid touching the eyes, nose, or mouth with unwashed hands.\n</string>
    <string name="mythsHeading">Some Common Myths Debunked\n</string>
    <string name="mythsText1">Myth #1: Coronavirus will go away in the summer.\n\nFact: According to the WHO, this strain of coronavirus can be transmitted regardless of the region\'s climate. A change in temperature isn\'t expected to curtail the outbreak.\n\n</string>
    <string name="mythsText2">Myth #2: In summer, the virus will spread more due to mosquito bites.\n\nFact: According to Faheem Younus, MD, Chief Quality Officer, and Chief of Infectious Diseases, University of Maryland UCH, this infection only spreads via respiratory droplets, not blood. Mosquitos cannot spread the disease.\n\n</string>
    <string name="mythsText3">Myth #3: If you can hold your breath for ten seconds without discomfort, you don’t have COVID-19.\n\nFact: According to Gavin Macgregor, an infectious disease expert, most young patients with coronavirus will be able to hold their breaths for much longer than 10 seconds.\n\n</string>
    <string name="mythsText4">Myth #4: Drinking water every 15 minutes will prevent you from contracting the virus.\n\nFact: Trudie Lang, a University of Oxford professor who specialises in global health, told that washing away a respiratory virus is impossible.\n\n</string>
    <string name="mythsText5">Myth #5: A vaccine to cure COVID-19 is available.\n\nFact: Lisa Maragakis, MD, MPH, Senior Director of infection prevention at Johns Hopkins University School of Medicine, says there is no vaccine for the new coronavirus right now. Scientists have already begun working on one, but developing a vaccine that is safe and one that has undergone clinical trials in human beings will take many months.\n\n</string>
    <string name="mythsText6">Myth #6: You can protect yourself from COVID-19 by swallowing or gargling with bleach, taking acetic acid or steroids, or using essential oils, saltwater, ethanol, or other substances.\n\nFact: None of these recommendations will protect you from getting COVID-19, and some of these practices may be dangerous says Lisa Maragakis.\n\n</string>
    <string name="mythsText7">Myth #7: You can get the virus from products made in China.\n\nFact: Scientists currently believe that the virus doesn\'t survive for extended periods on hard surfaces, although its lifespan still is being studied. A package from China will be in transit for several days or weeks before being delivered so it\'s unlikely that it harbours the virus, according to John Hopkins Medicine.\n\n</string>
    <string name="mythsText8">Myth #8: Since COVID-19 testing is unavailable, we should donate blood. The blood bank will test for it.\n\nFact: According to Faheem Younus, no blood bank is testing for coronavirus so this attempt will fail. Blood donation is a sacred exercise; let’s make sure we are motivated by the right reasons.\n\n</string>
    <string name="mythsText9">Myth #9: Hand dryers kill the coronavirus.\n\nFact: According to the WHO, the best method of protecting yourself against the virus is washing your hands with warm water and soap.\n\n</string>
    <string name="mythsText10">Myth #10: Spraying yourself with chlorine or alcohol will kill the virus.\n\nFact: Although alcohol and chlorine can be used in small amounts as disinfectants on hard surfaces, they cannot kill the virus once it has entered your system, according to WHO. The products also can irritate your mouth, eyes and other mucous membranes.\n\n</string>
    <string name="mythsText11">Myth #11: Hand sanitisers are better than soap and water.\n\nFact: Faheem Younus says that soap and water actually kills and washes away the virus from the skin (it can not penetrate our skin cells), besides cleaning the visible soiling of hands.\n\n</string>
    <string name="mythsText12">Myth #12: Eat a lot of garlic to avoid getting the virus.\n\nFact: Although garlic has some antimicrobial properties, which slows the spread of microorganisms, there isn\'t any proof that garlic has helped prevent the spread of coronavirus according to WHO.\n\n</string>
    <string name="mythsText13">Myth #13: Rinsing your nose with nasal saline will prevent the virus.\n\nFact: There is some limited evidence that regularly rinsing your nose with saline lowers the duration of a common cold, according to WHO. But rinsing your nose has not been proven to eliminate the coronavirus or any other respiratory infection.\n\n</string>
    <string name="mythsText14">Myth #14: Chinese food is unsafe to eat right now.\n\nFact: According to the Centers for Disease Control and Prevention (CDC), the spread of the virus has created a stigma toward Asian-Americans, the East Asian community, and other groups who were placed in quarantine. In reality, the virus spreads through respiratory droplets and there\'s little risk of contracting the virus from food.\n\n</string>
    <string name="mythsText15">Myth #15: Ultraviolet disinfection lamps kill the virus on your skin.\n\nFact: According to WHO, the best way to sterilise your hands is by washing them with soap and water. The ultraviolet light will irritate your skin.\n\n</string>
    <string name="mythsText16">Myth #16: The virus was manufactured in a lab and was deliberately released.\n\nFact: According to John Hopkins Medicine, viral outbreaks are common when an animal undergoes changes and passes the virus to humans, which is the likely origin of the coronavirus.\n\n</string>
    <string name="mythsText17">Myth #17: The virus only affects the elderly.\n\nFact: People who are elderly or have compromised immune systems are at a greater risk for severe illness if they contract the virus, according to WHO. But anyone of any age can contract and spread the virus to others.\n\n</string>
    <string name="mythsText18">Myth #18: The pets at home can spread the new virus.\n\nFact: There is no such evidence at present that companion animals/pets such as dogs or cats can be infected with the new coronavirus. However, it is a good practice to wash your hands with soap and water after contact with pets.\n\n</string>
    <string name="mythsText19">Myth #19: If you have coronavirus, "you'll know".\n\nFact: No, you won\'t. COVID-19 causes a wide range of symptoms, many of which appear in other respiratory illnesses such as the flu and the common cold. Specifically, common symptoms of COVID-19 include fever, cough and difficulty breathing, and early on, infected people may show no symptoms at all.\n\n</string>
    <string name="mythsText20">Myth #20: Getting COVID-19 is a death sentence.\n\nFact: About 80% of people who are infected with the coronavirus have mild cases of COVID-19, and recover from the disease without needing hospital treatment.\n\n</string>
</resources>