<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scroll4"
        android:layout_width="390dp"
        android:layout_height="710dp"
        android:layout_centerInParent="true">


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mythsTextView"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:paddingLeft="3sp"
                android:text="@string/mythsHeading"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="24dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/mythsImage1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/burstingmyths" />

            <TextView
                android:id="@+id/mythsTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/mythsImage2"
                android:layout_width="wrap_content"
                android:layout_height="192dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/holdbreath" />

            <TextView
                android:id="@+id/mythsTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText5"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/mythsImage3"
                android:layout_width="wrap_content"
                android:layout_height="192dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/facepalm" />

            <TextView
                android:id="@+id/mythsTextView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText6"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText7"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText9"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText10"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText11"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText12"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText13"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText14"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText15"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/mythsImage4"
                android:layout_width="wrap_content"
                android:layout_height="192dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/nono" />

            <TextView
                android:id="@+id/mythsTextView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText16"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText17"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText18"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText19"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mythsTextView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/mythsText20"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/mythsImage5"
                android:layout_width="wrap_content"
                android:layout_height="192dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/xmyth" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>