<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <ScrollView
        android:id="@+id/scroll2"
        android:layout_width="390dp"
        android:layout_height="710dp"
        android:layout_centerInParent="true">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signsTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="108sp"
                android:text="@string/transmissionHeading"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signsTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/transmissionText1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/transmissionPic1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/coughdroplets" />

            <TextView
                android:id="@+id/signsTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/transmissionText2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/signsTextView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/transmissionText3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/signsTextView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/transmissionText4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/spreadId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/spreading" />

            <TextView
                android:id="@+id/signsTextView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="125sp"
                android:text="@string/symptomsHeading"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signsTextView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/symptomsText1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/signsTextView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/symptomsText2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/signsTextView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/symptomsText3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/symptomsId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/symptoms" />

            <TextView
                android:id="@+id/signsTextView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/symptomsText4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/signsTextView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/symptomsText5"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/testingId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/testing" />

            <TextView
                android:id="@+id/signsTextView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/symptomsText6"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/signsTextView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingRight="3sp"
                android:text="@string/symptomsText7"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>